@@ -11,7 +11,6 @@ HIGH
 MEDIUM
 - 'Molecule count' feature
 - 'H3O+/OH- ratio' feature
-- replace temporary PHMeterNode, delete associated images
 - add color range for each solute, use opaque colors
 
 LOW
